# Individual2Uzo

./: Makefile  README.md  query_log.md  unisexdb.db
.github/workflows/: cicd.yml
rust-cli-binary/: Cargo.toml  test_unisexDB.db  unisexDB.db  unisex_names_table.csv
rust-cli-binary/src/: lib.rs  main.rs
rust-cli-binary/tests/: test.rs
